fix(TDI-45723): Sanitize MLCP command string (Use ProcessBuilder) (#1883)
* fix(TDI-45723): Sanitize MLCP command string (Use ProcessBuilder)

* chore(TDI-45723): Add some javadocs